--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
-    "@hapi/hapi": "^20.1.4"
+    "@hapi/hapi": "^20.1.4",
+    "nanoid": "^3.1.25"
   }
 }
